# morgana

./: ARCHITECTURE.md  README.md  __init__.py  alignment.py  arcface.py  base.py  base_backend.py  buffalo.py  config.py  hyperswap.py  identity_io.py  insightface_backend.py  inswapper.py  landmark106.py  onnx_shape.py  pyproject.toml  requirements.txt  sam_mask.py  ultra_sharp.py  video.py
morgana/: config.py
morgana/backends/: core_backend.py
morgana/cli/: main.py
morgana/core/: pipeline.py  types.py
morgana/detection/: __init__.py  analyzer.py
morgana/swappers/: reswapper.py
morgana/utils/: identity_build.py  image.py  model_download.py  model_loader.py
